# drf

./: .env.dev  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
drf/: settings.py  urls.py
snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py  0002_snippet_highlighted_snippet_owner.py
